# OBS-Live-Translator

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_VRAM_BREAKDOWN.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GPU_PERFORMANCE_ANALYSIS.md  HACKATHON_README.md  LICENSE  OPTIMIZATION_GUIDE.md  PERFORMANCE.md  PERFORMANCE_RESULTS.md  PROJECT_STRUCTURE.md  README.md  SESSION_SUMMARY.md  SUBTITLE_OVERLAY_GUIDE.md  asr.py  audio.py  build.rs  config.py  config.toml.example  docker-compose.yml  main.py  models_config.toml  obs.py  obs_script.py  package.json  performance_baselines.json  pipeline.py  requirements.txt  translator.py  vad.py
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
config/profiles/: igpu_amd.toml  igpu_intel.toml  mps.toml  vram_24gb_ultimate.toml  vram_2gb.toml  vram_4gb.toml  vram_6gb_plus.toml
docs/: API.md  DEPLOYMENT.md  INTEGRATED_GPU_PERFORMANCE.md  OBS_INTEGRATION.md  OPTIMIZATION_GUIDE.md  README.md  RESEARCH_MODELS_2024.md  VRAM_CALCULATIONS.md  VRAM_USAGE_GUIDE.md  _config.yml  index.html
docs/development/: SESSION_SUMMARY.md
examples/: test_batching.rs  test_canary_int8.rs  test_cobra_vad.rs  test_flash_attention.rs  test_kv_cache.rs  test_lang_detect.rs  test_lang_strategy.rs  test_lingua.rs  test_nllb_int8.rs  test_parakeet_int8.rs  test_silero_v5.rs  test_ten_vad.rs  test_vad_selection.rs  verify_ort_api.rs  verify_platform.rs
hackathon/: presentation_outline.md
overlay/: competition-dashboard.html  index.html  script.js  styles.css
scripts/: benchmark_igpu.py  check_regression.py  deploy.sh  download-models.sh  download_canary_int8.py  download_nllb_int8.py  download_parakeet_int8.py  download_silero_v5.py  download_ten_vad.py  download_test_data.py  optimize.sh  setup.sh  setup_models.sh  test_with_subtitles.sh
src/: batching.rs  error.rs  execution_provider.rs  integration_tests.rs  lib.rs  logging.rs  platform_detect.rs  types.rs
src/acceleration/: detection.rs  inline_asm_optimizations.rs  mod.rs  onnx_runtime.rs  quantization.rs
src/adaptive/: mod.rs  model_selector.rs
src/ai/: emotion_analyzer.rs
src/ai_innovations/: context_awareness.rs  mod.rs  topic_summarization.rs
src/asr/: adaptive_asr.rs  beam_search.rs  canary.rs  distil_whisper.rs  inference_engine.rs  mod.rs  parakeet.rs  parakeet_streaming.rs  whisper_small.rs  whisper_tiny.rs
src/audio/: buffer.rs  features.rs  mel_spectrogram.rs  mod.rs  pipeline.rs  preprocessing.rs  processor.rs  processor_trait.rs  resampler.rs  resampling.rs  vad.rs  whisper_mel.rs
src/audio/features/: adaptive_extractor.rs  enhanced_extractor.rs  ipp_extractor.rs  mod.rs  (+1 more)
src/bindings/: mod.rs
src/cache/: mod.rs
src/competition/: mod.rs
src/config/: app_config.rs  mod.rs  profile_config.rs  setup_manager.rs
src/core/: gpu_detector.rs
src/cultural_intelligence/: interpretation_agent.rs  mod.rs
src/demo/: demo_mode.rs
src/gpu/: adaptive_memory.rs  fallback.rs  hardware_detection.rs  memory_pool.rs  mod.rs
src/hardware/: compatibility.rs  cpu-optimizer.rs  fallback.rs  gpu_optimizer.rs  mod.rs
src/inference/: acceleration.rs  batch.rs  engine.rs  fallback.rs  mod.rs  nllb.rs  onnx.rs  optimization.rs  quantization.rs  speculative_decoding.rs  tokenizer.rs  translation.rs  unified_framework.rs  unified_translator.rs  whisper.rs  whisper_translate.rs
src/language_detection/: fasttext_detector.rs  language_fusion.rs  lingua_detector.rs  mod.rs  pipeline.rs  whatlang_detector.rs
src/memory/: audio_buffers.rs  mod.rs
src/models/: amd-optimization.rs  cache.rs  canary_flash.rs  download.rs  downloader.rs  engine.rs  inference.rs  mms-multilingual.rs  mod.rs  model_switcher.rs  nllb_600m.rs  nvidia-acceleration.rs  quantizer.rs  seamless_m4t_v2.rs  session_cache.rs  usm-chirp.rs  validator.rs  whisper_v3_turbo.rs
src/monitoring/: adaptive_optimizer.rs  alerts.rs  dashboard.rs  metrics.rs  metrics_collector.rs  mod.rs  performance_monitor.rs  telemetry.rs
src/native/: audio_simd.cpp  cuda_kernels.cu  engine_ffi.rs  engine_stub.cpp  gpu_kernels.cu  gpu_kernels_unified.cu  mod.rs  onnx_inference.cpp  simd_ffi.rs
src/networking/: mod.rs
src/obs/: audio-capture.rs  browser-source.rs  mod.rs  plugin.rs  setup.rs  websocket.rs
src/optimization/: kv_cache.rs  tensorrt_fp8.rs
src/pinnacle/: engine.rs  inference.rs  mms-multilingual.rs  mms_multilingual.rs  mod.rs  native_inference.rs  nvidia-acceleration.rs  nvidia_acceleration.rs  rdna4_optimization.rs  usm-chirp.rs  usm_chirp.rs
src/production/: config.rs  error_recovery.rs  health_check.rs  logging.rs  mod.rs
src/profile/: components.rs  manager.rs  mod.rs  monitor.rs
src/quality/: audio_qa.rs  feedback.rs  metrics.rs  mod.rs  translation_qa.rs
src/server/: mod.rs
src/streaming/: advanced_cache.rs  cache_warmer.rs  enhanced_session.rs  latency_optimizer.rs  lockfree_pipeline.rs  mod.rs  multi_stream.rs  optimized_pipeline.rs  optimized_websocket.rs  opus_codec.rs  pipeline.rs  protocol.rs  protocol_optimizer.rs  realtime_pipeline.rs  resource_manager.rs  server.rs  session.rs  unified_pipeline.rs  websocket.rs  webtransport.rs
src/tokenization/: mod.rs  nllb_tokenizer.rs
src/translation/: cache.rs  claude.rs  m2m_translator.rs  madlad.rs  marian_translator.rs  mod.rs  nllb.rs  nllb_translator.rs  translation_pipeline.rs
src/vad/: cobra.rs  mod.rs  silero.rs  ten_vad.rs
src/voice_cloning/: mod.rs
src/web/: mod.rs  subtitle_server.rs
static/: index.html
test_data/: manifest.json  metadata.json
test_data/youtube/: samples.json
tests/: integration_test.rs
tests/benchmarks/: performance_bench.rs
tests/integration/: e2e_tests.rs  mod.rs  multi_stream_test.rs  performance_tests.rs
tests/performance/: benchmarks.rs  latency_suite.rs  memory_validator.rs  mod.rs  regression_detector.rs
tests/unit/: audio_tests.rs  inference_tests.rs  mod.rs  streaming_tests.rs
web/: control_panel.html  subtitle_overlay.html
(+10 files in other folders)
