[package]
name = "obs-live-translator"
version = "4.0.0"
edition = "2021"
description = "High-performance real-time speech translation with native optimizations"
license = "Apache-2.0"
repository = "https://github.com/YourUsername/obs-live-translator"
keywords = ["speech", "translation", "streaming", "real-time", "performance"]

[lib]
name = "obs_live_translator"
crate-type = ["cdylib", "rlib"]

[features]
default = []
simd = []
cuda = []
dml = []  # DirectML for Windows

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }

# Audio processing
rustfft = "6.0"
hound = "3.5"  # WAV file support

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory
mimalloc = { version = "0.1", features = ["override"] }

# Configuration
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "obs-translator-server"
path = "src/bin/server.rs"