[package]
name = "obs-live-translator"
version = "4.0.0"
edition = "2021"
description = "High-performance real-time speech translation with native optimizations"
license = "Apache-2.0"
repository = "https://github.com/YourUsername/obs-live-translator"
keywords = ["speech", "translation", "streaming", "real-time", "performance"]

[lib]
name = "obs_live_translator"
crate-type = ["cdylib", "rlib"]

[features]
default = []
simd = []
cuda = []
dml = []  # DirectML for Windows
tensorrt = []  # TensorRT acceleration
flash-attention = []  # Flash attention optimization

# Profile-specific features
profile-low = []
profile-medium = ["profile-low"]
profile-high = ["profile-medium", "simd"]

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }

# Audio processing
rustfft = "6.0"
hound = "3.5"  # WAV file support

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory allocators
mimalloc = { version = "0.1", features = ["override"] }  # Global high-performance allocator
bumpalo = "3.14"  # Bump allocator for audio frame processing
linked_list_allocator = "0.10"  # TLSF-style allocator for real-time processing

# Configuration
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for model downloading
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Cryptography for model validation
sha2 = "0.10"

# Temporary files for testing
tempfile = "3.8"

# Hardware detection
num_cpus = "1.16"

# Profile-specific dependencies

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_SystemInformation"], optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "obs-translator-server"
path = "src/bin/server.rs"