[package]
name = "obs-live-translator"
version = "5.0.0"
edition = "2021"
description = "State-of-the-art real-time speech translation with ONNX Runtime and multi-platform acceleration"
license = "Apache-2.0"
repository = "https://github.com/YourUsername/obs-live-translator"
keywords = ["speech", "translation", "streaming", "real-time", "onnx"]

[lib]
name = "obs_live_translator"
crate-type = ["cdylib", "rlib"]

[features]
default = ["profile-medium"]

# Hardware acceleration features (Part 6 & 7 research)
# NVIDIA GPUs (Windows/Linux)
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]

# Apple Silicon (macOS)
coreml = ["ort/coreml"]

# Intel CPUs/iGPUs (Windows/Linux)
openvino = ["ort/openvino"]

# Generic GPU acceleration (Windows)
directml = ["ort/directml"]

# Profile-specific features
profile-low = []
profile-medium = ["profile-low"]
profile-high = ["profile-medium"]

# Optional features
claude-api = ["async-openai"]  # Premium translation with Claude
webtransport = ["wtransport"]  # WebTransport support (has security note, see dependencies)
lingua-fallback = ["lingua"]

[dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full", "tracing"] }
async-trait = "0.1"
anyhow = "1.0.93"
thiserror = "2.0"

# ONNX Runtime - Core inference engine 
# Using latest available: v2.0.0-rc.10 (May 2025) wraps ONNX Runtime 1.22
# Note: This is newer than stable v1.16.3 (Nov 2023). RC is acceptable for newest features.
ort = { version = "2.0.0-rc.10", features = ["half"] }
ndarray = "0.16"

# Audio processing
rustfft = "6.2"
hound = "3.5"
rubato = "0.15"  # High-quality resampling
dasp = "0.11"  # Digital audio signal processing

# Tokenizers for models
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Web server - WebSocket + WebTransport
axum = { version = "0.7.9", features = ["ws", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"

# WebTransport support
# Security Note: Currently depends on ring 0.16.20 (RUSTSEC-2025-0009)
# Monitoring for wtransport updates to address dependency vulnerability
wtransport = { version = "0.1", optional = true }  # WebTransport over QUIC

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bincode = "1.3"

# Logging & tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# High-performance memory allocator
mimalloc = { version = "0.1.43", default-features = false }

# Configuration
# Security Note: Depends on unmaintained json5 crate (RUSTSEC-2025-0120)
# Acceptable as config crate itself is actively maintained
config = "0.14.1"
toml = "0.8.19"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sysinfo = { version = "0.32", features = ["system"] }  # Enabled "system" feature for platform detection

# HTTP client for model downloading & optional Claude API
reqwest = { version = "0.12.9", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3.31"

# Cryptography for model validation
sha2 = "0.10.8"

# Hardware detection
num_cpus = "1.16"

# Language detection - CLD3 wrapper (note: limited Rust bindings available)
# CLD3 functionality will use alternative implementation
# cld3 = "0.1" # Build failed due to protobuf mismatch
whatlang = "0.16"
lingua = { version = "1.7", optional = true }

# Metrics and monitoring
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# Async channels
flume = "0.11"  # High-performance MPSC channels
crossbeam = "0.8"

# Optional: Claude API for premium translation
# Security Note: Brings in unmaintained backoff/instant crates (low risk, no active vulnerabilities)
# Will be feature-gated - used only for High profile translation
async-openai = { version = "0.24", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Metal Performance Shaders for audio processing on macOS
metal = "0.29"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_SystemInformation",
    "Win32_Graphics_Direct3D12",
] }

[build-dependencies]
cc = "1.0"
bindgen = "0.70"  # For potential C/C++ bindings

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.5"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[[bin]]
name = "obs-translator-server"
path = "src/bin/server.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "download-models"
path = "src/bin/download_models.rs"
